<resources>
    <string name="app_name">Proje</string>
    <string name="listelerim">Listelerim</string>
    <string name="listelerim_but">Listelerim</string>
    <string name="yemek_tarif_but">Yemek Tarifleri</string>
    <string name="kalori_hesaplayıcı_but">Kalori Hesaplayıcı</string>
    <string name="yeniliste_but">Yeni Liste+</string>
    <string name="alinanürünler">Alınan Ürünler</string>
    <string name="ürünekle_but">Ürün Ekle</string>
    <string name="listeyisil_but">Listeyi Sil</string>
    <string name="adet_gram">ADET / GRAM</string>
    <string name="ürünüsil_but">Ürünü Sil</string>
    <string name="kaydet_but">Kaydet</string>
    <string name="tümürünler">Tüm Ürünler</string>
    <string name="alkollü">Alkollü İçkiler ve İçecekler</string>
    <string name="alkolsüz">Alkolsüz İçecekler</string>
    <string name="dondurma">Dondurma ve Donmuş Tatlılar</string>
    <string name="ekmek">Ekmek ve Pasta Malzemeleri</string>
    <string name="et">Et ve Balık Ürünleri</string>
    <string name="kurugıda">Kuru Gıda</string>
    <string name="meyve">Meyve ve Sebzeler</string>
    <string name="ot">Otlar ve Baharatlar</string>
    <string name="yag">Sıvı ve Katı Yağlar</string>
    <string name="süt">Süt ve Süt Ürünleri</string>
    <string name="temizlik">Temizlik Ürünleri</string>
    <string name="diğer">Diğer</string>
    <string name="yemektarifleri">Yemek Tarifleri</string>
    <string name="malzemeekle_but">Malzemeleri Ekle</string>
    <string name="kalori">Kalori Hesaplayıcısı</string>
    <string name="toplamkalori">Toplam Kalori</string>
    <string name="temizle">Temizle</string>
    <string name="ev">Ev</string>
    <string name="eklenecekMik">Eklemek istediğiniz miktarı girin</string>
    <string name="gecersizSayi">Girdiğiniz sayı geçersiz</string>
    <string name="kaloriBilgisiBulunamadi">Kalori bilgisi bulunamadı</string>
    <string name="kaloriYazisi">kalori</string>
    <string name="miktar_giriniz">Miktar giriniz</string>
    <string name="ekle">Ekle</string>
    <string name="iptal">İptal</string>
    <string name="çerez">Çerezler</string>
    <string name="not">NOT</string>
    <string name="ürünadı">ÜRÜN ADI</string>
    <string name="arama">Ürün ara veya ekle</string>
    <string name="adetgir">Adet giriniz:</string>
    <string name="yenilisteismi">Yeni Liste İsmi</string>
    <string name="notgir">Not giriniz:</string>
    <string name="isimgiriniz">İsim giriniz...</string>
    <string name="toast1">Bu isimli liste zaten var. Başka isim giriniz.</string>
    <string name="toast2">Bu ürün zaten listede var.</string>
    <string name="toast3">listeye eklendi</string>
</resources>