<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77615151"
    android:orientation="vertical"
    android:paddingLeft="25dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="313dp"
        android:layout_height="77dp"
        android:layout_marginBottom="30dp"
        android:text="@string/yenilisteismi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yeniListe"
        app:layout_constraintEnd_toEndOf="@+id/yeniListe"
        app:layout_constraintStart_toStartOf="@+id/yeniListe" />

    <EditText
        android:id="@+id/yeniListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/isimgiriniz"
        android:inputType="textPersonName"
        android:textColor="#040404"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaydet_but"
        app:layout_constraintEnd_toEndOf="@+id/yeniListe"
        app:layout_constraintStart_toStartOf="@+id/yeniListe"
        tools:layout_editor_absoluteY="295dp" />

</LinearLayout>