<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/ProductInfoLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#BF000000">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="308dp"
        android:layout_height="88dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#272626"
        android:onClick="addNote"
        android:paddingStart="10dp"
        android:text="Bitter çikolata ve sütlü çikolata"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/not"
        android:textColor="#C8C6C6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView11"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="285dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#272626"
        android:onClick="addAdet"
        android:paddingStart="10dp"
        android:text="2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ürünadı"
        android:textColor="#C8C6C6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="285dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#272626"
        android:paddingStart="10dp"
        android:text="Çikolata"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/adet_gram"
        android:textColor="#C8C6C6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <Button
        android:id="@+id/button22"
        android:layout_width="204dp"
        android:layout_height="53dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FF0000"
        android:onClick="deleteProduct"
        android:text="@string/ürünüsil_but"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="204dp"
        android:layout_height="53dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#4BDA13"
        android:onClick="kaydet"
        android:text="@string/kaydet_but"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>